# chip-8

./: .gitignore  Cargo.toml  README.md
src/: chip8.rs  main.rs
